<resources>

    <!--Util-->
    <string name="jesta_value">Value</string>
    <string name="jesta_app_name">Jesta</string>

    <!--Jesta Login-->
    <string name="jesta_login_email_hint">Enter email</string>
    <string name="jesta_login_password_hint">Enter password</string>
    <string name="jesta_login_register">REGISTER</string>
    <string name="jesta_login_login">Login</string>
    <string name="jesta_login_welcome">Welcome! 👋</string>
    <string name="jesta_login_error">ERROR</string>
    <string name="jesta_login_request_otp">REQUEST OTP</string>
    <string name="jesta_login_full_name_hint">Enter full name</string>
    <string name="jesta_login_cellular_hint">Enter phone number</string>
    <string name="jesta_login_google">Google</string>
    <string name="jesta_login_facebook">Facebook</string>
    <string name="jesta_login_email">Email</string>
    <string name="jesta_login_create_account_link">Create account</string>
    <string name="jesta_login_facebook_app_id">535928036830747</string>
    <string name="jesta_login_fb_login_protocol_scheme">fb535928036830747</string>
    <string name="jesta_login_leftArrow">←</string>
    <string name="jesta_login_phone_hint">Enter your phone number</string>
    <string name="jesta_login_enter_otp">Enter the code you received</string>
    <string name="jesta_login_lets">Let\'s Log-in</string>
    <string name="jesta_login_button_text">Login</string>
    <string name="jesta_login_create_account">Create an Account</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>🙁
    <string name="login_display_name">Display Name</string>🤝


    <!--Navigation Menu  -->
    <string name="nav_ask_jesta">Ask</string>
    <string name="nav_do_jesta">Do</string>
    <string name="nav_settings">More</string>
    <string name="nav_status">Status</string>
    <string name="nav_bottom_sheet_profile_description">Profile Picture</string>

    <!-- Mission Card -->
    <string name="jesta_card_description">Jesta Description</string>
    <string name="jesta_card_tag">Tag</string>
    <string name="jesta_card_title">Jesta Title</string>
    <string name="jesta_card_profile_description">Profile avatar</string>
    <string name="jesta_card_icon_reward_description">Diamond color icon</string>
    <string name="jesta_card_review_cash">Payment</string>
    <string name="jesta_card_review_icon">Card review icon</string>
    <string name="jesta_card_review_crew">Crew</string>

    <!--Jesta Post-->
    <string name="jesta_post_button_accept">DO Jesta</string>
    <string name="jesta_post_description">Description</string>
    <string name="jesta_post_title">Title</string>
    <string name="jesta_post_photo">Jesta Photo</string>
    <string name="jesta_post_browse">Browse</string>
    <string name="jesta_post_fill_amount">FILL AMOUNT</string>
    <string name="jesta_post_pay">How Much Are You Willing to Pay?</string>
    <string name="jesta_post_crew">How Many people do you need?</string>
    <string name="jesta_post_location">What is the location?</string>
    <string name="jesta_post_fill_location">FILL LOCATION</string>
    <string name="jesta_post_duration">How long will the Jesta take?</string>
    <string name="jesta_post_accept">Post a Jesta</string>
    <string name="jesta_post_preview">Preview</string>
    <string name="jesta_post_difficulty">Medium</string>
    <string name="jesta_post_add_tag">Add Tag</string>
    <string name="jesta_post_button_reset">Reset</string>
    <string name="jesta_post_choose_difficulty">Difficulty</string>
    <string name="jesta_post_worth">Set the Jesta worth</string>
    <string name="jesta_post_time_start">Set Start Time</string>

    <!--Jesta Settings-->
    <string name="jesta_settings_phone_number_default">example@gmail.com</string>
    <string name="jesta_settings_full_name_default">Full Name</string>
    <string name="jesta_settings_edit_profile_icon_description">Edit Profile Icon</string>
    <string name="jesta_settings_default_values">Default Values</string>
    <string name="jesta_settings_diamond_amount">Diamonds Amount</string>
    <string name="jesta_settings_account">Account</string>
    <string name="jesta_settings_chat">Chat Settings</string>
    <string name="jesta_settings_button_log_out">Log Out</string>

    <string name="jesta_settings_bug">Send us feedback</string>
    <string name="jesta_settings_about">About</string>
    <string name="jesta_settings_total_diamonds">Total diamonds</string>
    <string name="jesta_settings_fake_total_diamonds">30000</string>
    <string name="jesta_settings_fill_display_name">Display name</string>
    <string name="jesta_settings_fill_email">EMAIL</string>
    <string name="jesta_settings_send_bug">Send Report</string>
    <string name="jesta_settings_chat_content">Empty for now ☹️</string>
    <string name="jesta_settings_about_agenda">"Tase li Jesta" - Typical Israeli asking for a favor. 😇 \n Jesta is a Social app where people doing Jestas (Favors) one to each other, for rewards and pleasure! 😉</string>

    <!--Jesta Preview-->
    <string name="jesta_preview_title">Jesta Title</string>
    <string name="jesta_preview_duration">Duration</string>
    <string name="jesta_preview_location">Location</string>
    <string name="jesta_preview_diamonds_text">Diamonds Worth</string>
    <string name="jesta_preview_difficulty_text">Difficulty</string>

    <!--Jesta Chat-->
    <string name="jesta_inbox_message">MESSAGE</string>

    <!--Jesta Status-->
    <string name="jesta_status_phase">Phase</string>
    <string name="jesta_status_total_users">Total Users</string>
    <string name="jesta_status_title">Jesta Title</string>
    <string name="jesta_status_job">Job</string>
    <string name="jesta_status_assign_a_doer">Assign a Doer</string>
    <string name="jesta_status_settings">Settings</string>
    <string name="jesta_status_edit_jesta">Edit jesta</string>
    <string name="jesta_status_preview">Preview</string>
    <string name="jesta_status_no_doer">No Doer Assigned Yet</string>
    <string name="jesta_status_approve_jesta">Approve Jesta Complete</string>
    <string name="jesta_status_post_complete_your_doers">Your doers</string>
    <string name="jesta_status_poster_no_doers_assigned_yet">no doers assigned yet</string>
    <string name="jesta_status_remove">Remove from status</string>
    <string name="jesta_status_poster_done_your_doers">Your doers</string>

    <!--Jesta about-->
    <string name="jesta_about_agenda_title">What we trying to solve?</string>
    <string name="jesta_about_agenda">Nowadays it is hard to find help for everyday tasks beyond your social circle. Jesta is trying to meet the need with creation of a cooperative community.</string>
    <string name="jesta_about_what_is_jesta_title">What is Jesta?</string>
    <string name="jesta_about_team_title">Team</string>
    <string name="jesta_about_project_title">Project</string>
    <string name="jesta_about_text_1">Jesta was made as a part of Android Course Project at Technion Institute of Technology.</string>
    <string name="jesta_about_text_2">Come Visit Us</string>
    <string name="jesta_about_github_icon">Github icon</string>
    <string name="jesta_about_team">Maxim Chicherin, Dennis Vashevnikov and Evgeni Leonti</string>

</resources>
