<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_ask_jesta"
            android:icon="@drawable/ic_take_diamond"
            android:title="@string/nav_ask_jesta" />

        <item
            android:id="@+id/nav_do_jesta"
            android:icon="@drawable/ic_ask_jesta"
            android:title="@string/nav_do_jesta" />

        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_jesta_status"
            android:title="@string/nav_status" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>