<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jesta_status_poster_done_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Jesta.Type.Purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/jesta_about_agenda_title"
            android:textSize="25sp" />

        <TextView
            style="@style/TextAppearance.Jesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/jesta_about_agenda"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            style="@style/TextAppearance.Jesta.Type.Purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/jesta_about_what_is_jesta_title"
            android:textSize="25sp" />

        <TextView
            style="@style/TextAppearance.Jesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/jesta_settings_about_agenda"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/_16dp"
            app:contentPadding="0.75dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_16dp">

                <ImageView
                    android:id="@+id/jesta_about_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/jesta_about"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/TextAppearance.Jesta.Type.Purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/jesta_about_team_title"
            android:textSize="25sp" />

        <TextView
            style="@style/TextAppearance.Jesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jesta_about_team"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            style="@style/TextAppearance.Jesta.Type.Purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/jesta_about_project_title"
            android:textSize="25sp" />

        <TextView
            style="@style/TextAppearance.Jesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jesta_about_text_1"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jesta_about_github"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            style="@style/Widget.Jesta.Button.Special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jesta_about_text_2"
            app:icon="@drawable/ic_github"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:rippleColor="@color/colorPrimaryLight"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</FrameLayout>