<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Jesta.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_do_jesta" />


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Jesta.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_map" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Jesta.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_status" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Jesta.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_settings" />
</merge>