<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.fragments.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_banner_titled"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.Jesta.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/_10dp"
                android:text="@string/jesta_login_welcome" />

            <TextView
                style="@style/TextAppearance.Jesta.Type.Purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/jesta_login_lets" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/jesta_login_google_button"
            style="@style/Widget.Jesta.Button.Special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/jesta_login_google"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:iconTint="@color/colorPrimary"
            app:rippleColor="@color/colorPrimaryLight"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jesta_login_facebook_button"
            style="@style/Widget.Jesta.Button.Special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/jesta_login_facebook"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:iconTint="@color/colorPrimary"
            app:rippleColor="@color/colorPrimaryLight"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jesta_login_email_button"
            style="@style/Widget.Jesta.Button.Special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jesta_login_email"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_jesta_mail"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:iconTint="@color/colorPrimary"
            app:rippleColor="@color/colorPrimaryLight"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>
</ScrollView>