<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/jesta_status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.github.florent37.expansionpanel.ExpansionHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_headerIndicator="@id/statusHeaderIndicator"
        app:expansion_layout="@id/statusExpansionLayout"
        app:expansion_toggleOnClick="true">

        <!-- HEADER -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/jesta_status_avatar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/jesta_default_avatar"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="0.75dp" />

            <TextView
                android:id="@+id/jesta_status_title"
                style="@style/TextAppearance.Jesta.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jesta_settings_account" />

            <TextView
                android:id="@+id/jesta_status_job"
                style="@style/TextAppearance.Jesta.Type.Purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jesta_settings_account" />

            <TextView
                android:id="@+id/jesta_status_phase"
                style="@style/TextAppearance.Jesta.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jesta_status_phase" />

            <TextView
                android:id="@+id/jesta_status_total_doers"
                style="@style/TextAppearance.Jesta.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jesta_status_total_users" />

            <!-- HEADER INDICATOR -->
            <ImageView
                android:id="@+id/statusHeaderIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:adjustViewBounds="true"
                android:contentDescription="@string/jesta_settings_edit_profile_icon_description"
                android:src="@drawable/ic_right_arrow" />
        </GridLayout>


    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/statusExpansionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_expanded="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/jesta_status_doers_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:background="@color/hint_color"
            android:scrollbars="vertical" />

    </com.github.florent37.expansionpanel.ExpansionLayout>
</LinearLayout>